# FakePDB

./: .gitignore  Readme.md  appveyor.yml  build.ps1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml
src_cpp/: CMakeLists.txt
src_cpp/include/coff/: lib_creator.h
src_cpp/include/commands/: command_coff_createlib.h  command_interface.h  command_pdb_generate.h  command_pe_exports.h  command_pe_guidage.h  command_pe_timestamp.h
src_cpp/include/common/: guid.h
src_cpp/include/data/: db.h  function.h  general.h  name.h  root.h  segment.h
src_cpp/include/pdb/: pdb_creator.h  pdb_symfactory.h
src_cpp/include/pe/: pe_file.h
src_cpp/src/: main.cpp
src_cpp/src/coff/: lib_creator.cpp
src_cpp/src/data/: db.cpp  segment.cpp
src_cpp/src/pdb/: pdb_creator.cpp  pdb_symfactory.cpp
src_cpp/src/pe/: pe_file.cpp
src_cpp/src_coff/: main.cpp
src_cpp/src_coff/coff/: lib_creator.cpp
src_cpp/src_common/commands/: command_executor.cpp  command_executor.h
src_cpp/src_common/data/: db.cpp  db.h  export.h  function.h  general.h  label.h  pe.h  root.h  segment.cpp
src_cpp/src_common/pe/: pe_file.cpp  pe_file.h
src_cpp/src_common/types/: guid.cpp  guid.h  hex.h
src_cpp/src_pdb/: main.cpp
src_cpp/src_pdb/commands/: command_pdb_generate.h
src_cpp/src_pdb/pdb/: pdb_creator.cpp  pdb_creator.h  pdb_symfactory.cpp
src_cpp/src_pe/: main.cpp
src_cpp/src_pe/commands/: command_pe_exports.h  command_pe_guidage.h  command_pe_timestamp.h
src_cpp/src_pe/pe/: pe_file.cpp
src_ida/: address_to_ida.py  dumpinfo.py  fakepdb.py
src_ida/fakepdb/: __init__.py  dumpinfo.py  generation.py  offsets.py  signatures.py
src_pdbgen/: CMakeLists.txt  guidhelper.h  hexhelper.h  idadb.cpp  idadb.h  main.cpp  pdbcreator.cpp  pdbcreator.h  pefile.cpp  pefile.h
src_pdbgen/test/: test_pefile_1.cpp
src_pdbgen/test_assets/: test_1.cpp
src_plugins/ida/: fakepdb.py
src_plugins/ida/fakepdb/: __init__.py  command_dumpinfo.py  command_findsignature.py  command_importoffsets.py  command_libgenerate.py  command_pdbgenerate.py  dumpinfo.py  native.py  offsets_importer.py  signature_finder.py
